feat: implement ClaimController and DocumentController
haven't passed tests but i'm pretty sure the tests are wrong